Fixed issue with item sizing in item_wrap

--- a/src/main/webapp/scss/components/itemWrap.scss
+++ b/src/main/webapp/scss/components/itemWrap.scss
@@ -1,7 +1,9 @@
 .item_wrap{
     margin:5px;
     float:left;
-    width: 286px;
+    &.item-story{
+        width: 286px;
+    }
 }
 
 .item_content{
